--- a/container.config
+++ b/container.config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-# Container name (test-conatiner by default)
-CONTAINER_NAME=new-conatiner
+# Container name (test-container by default)
+CONTAINER_NAME=test-container
 
 # Debian version (stretch by default)
 VERSION=stretch
