--- a/container.config
+++ b/container.config
@@ -4,11 +4,11 @@
 CONTAINER_NAME=test-container
 
 # Debian version (stretch by default)
-VERSION=stretch
+CONTAINER_VERSION=stretch
 
 # Container OS root password
-PASSWORD=p0S1w2D3
+CONTAINER_PASSWORD=p0S1w2D3
 
 # Container archivied status (on or off)
-TAR=on
+CONTAINER_TAR=on
 
